--- a/UcasProjectManagement/UcasProWindowsForm/Forms/AmountRecivedForms/FrmMangeAmount.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/AmountRecivedForms/FrmMangeAmount.resx
@@ -136,61 +136,61 @@
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABQ1JREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
-        RoVgUQmYGKLLKMhGgACDbeyt6zaKBGrHxui2ruu69b2da0tfbu/t2rVbe/ty+ve5dx0Viyaa6D/55dzc
-        e87/Oed57jlH8b+qWCzuZYz1l9D8A7REL4DaklWlyLwmm82GqdO/Vj6fd1PzVMmyrEKxuI8+zhSKSx1Z
-        sQh6RwAFJkHPfwf1lYZK/Wklx0u2ZYmMNS6bq10x1Hbb8V6vE3U9TmzvcmBrhw1b2m147aq1glfbrKi6
-        NIkOhyCPzzDWVrItS8wz1VxygeYCOGIZdFEQjXsOPUS3M4ZOot0ew1W7UEEbcXmah13IgBaCTI5dLtmW
-        laYAQmKB5SkdVj5NZgK6SsayiU1Aq5XH5YfQTJy3ROVxUhYWc6y5ZFvWfJapohRAWmI3zV5Kz8daDz64
-        5sGeXhfqNC7sUDuxjdL1Z97udGAjpanTuZSihczDAohMFYylWEJkiKYL8CaymCGk1hMXZdwSc5W4pDae
-        xVymCJ7GksfZkm1ZsTRTBSgA+dOyo3iLirpD7UAtzVB63kzF3Ng2jeorlaxvnkJNqx39QRGTCUAzy3SH
-        gRUl6yVFKcAMn2SRRUazzsEYTsuME2PhRYwSIxKhBzEQllgeJ2+acbCxDbYM0BEAznlZY8l6ScGFvMoT
-        TTKBlqn1JnB40I+jdwI4QigHAzg04McBvQ9f6GYf4LvbfjRNcKgbCECxW4n99WcQojro4sApc/LS8WG+
-        7n4AF5dk3GIR/d55fEumR4eDcoBv6PlrMjqo9+MrCiJxYMAHJbGT0vdksw2rfoljhUaA4v1jUJ48B1oE
-        epypwkVr+rocwDefV01H5pl3Pg8LL0LvX4A+kMJAYAG/+lIyOuLWbBI3iWH6Zgym8OkIj1WaEB5V38Mz
-        ugRWaueg2KXEoYYmGISiciBWXCcHmInnVVPBeRZMMZwxU5E7bdhORX6HivwG7eBN9BvWtE7jlSsWrL9i
-        xwvn7VjT4cbKniAe6wvjJZ2Ap6+FsKKPVtE0hed37v9SNl6WJ55VmQJxZhNysESzMATTuCuziGGJe0uM
-        RbIYmeWxXTsFRTuHJ7QRVN+J48VbPBRU3VUdPnym9/WWbMuyx7IqYyDBPAmGs5M8dtEZtKfXg90aN3Z0
-        O+WVvNnhwIYOP37s7oJ5qAHVwzGsNeRRNUhpaffjkRYvjhk5iCK7ULIty0oBDL44m+Jz0M4k8fNEFE1m
-        HqcneJwyRaEa53DCJEA5FEHzJSUdWCcQ4yewZzIFRaeAx7tn0UATC8RztOlylTvZImRVw7NzbILS0+dN
-        yoaS8UkThwZjBPWjYZywpnGoZQAf1m5A1PADEGyFyXiB/qJBrGl24YY7AedcAWYuU3nYmTixcZzLYoov
-        kGlU3sE71S7UUqG30lnzOhV5y/Uonnv3c6xe/Sy2bX4Z5paP4Nb/hCN9eqxvcaPeGMW0kIc5kqk8rm2C
-        uM/IiTODgQxGQ1kYqZhSQeU2LMK+COgdIaxbW4Wq6k34RFkPtWESg5ECbtPOmqTJjVK/ARo/yWUqLxxJ
-        NiFTM3QvEzaERNn4j0gB1Hcs+P70RdxwcLDSkWCg3Xo3UsQ4l4OJAtylcSOhBbczkam8Mpdl4XN7R8Lp
-        fglDKK1ZZozLaXRuTmMS0prf6JK3pphmLJK7/90QFrWjwXQv/Sx/fen/N1IofgeNWsV45SX3AAAAAABJ
-        RU5ErkJggg==
+        wwAADsMBx2+oZAAABQxJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNTRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbey92ygSmC0bo9u6re3W93Zb1/Xl9t6+7K339uX073PvOioWTTTRf/LLubn3
+        nP9zzvPcc47qf1U+n9/HGOspoP0H6IguAJUFq1KReUU6nQ5Tp3+tbDbroeapgmVRuXx+P32czOWXO7J8
+        HvSOAHJMhp7/DuorD5X700pOFGyLkhirXTHvcMdQ2e7A+10uVHW6sKPNiW0tdmxttuP1a7YSXmuyoeyy
+        BS1OQRkvMtZUsC1KyjJNNJ6kuQDOmIg2CqL1xNFJtLtiaCWaHTFccwglNBFXJng4BBG0EIgZdqVgW1SK
+        AkSEJMtSOmx8iswEtBWMFRO7gEYbjysPoZ64YI0q4+QsLGVYfcG2qLk004QogLzEdpq9nJ5PdF58eN2L
+        vV1uVGnd2NnhwnZK1595p9WJVylNra7lFC2KDwsgMY2fS7CkxBBN5eBLpjFJyK03ISl4ZOKluOU2kUZc
+        zIOnseRxrmBbVCzFNFMUgPxp2VG8TUXd2eFEJc1Qft5CxXy1aQLlV0vZWD+OikYHeoISLElAO816jwCr
+        CtbLilIAdzjOIkuMZp2BKZxSGCGGw0sYIgZlQg9iJKyxLE7dMuNQbRPsItASAM77WG3BelnBxazGGYoz
+        gZap8yVxpG8Gx+4GcJRQ9wVw2DCDg3o/vuydfoDv78ygboxDlSEA1R41DlSfRYjq0JsATpvnL58Y4Kvu
+        B7AH44xbyqPHN4fvyPTYQFAJ8C09f0NGh/Qz+JqCyBw0+KEmdlH6nqy3Y82vCazSClB9cBzqU+dBi0Cn
+        LZG7ZEvdUAL457Ia82yM+eaysPIS9DOL0AcWYAgs4jf/gkIvcXt6HreIAfpmCi7gs0Eea7QhPNoxi2d6
+        k1iti0O1W43DNXUwCnm1IZbfoASYTGQ1Y/4YCy4wnDVTkVvt2EFFfpeK/Cbt4M30G1Y0TuCVq1ZsvOrA
+        CxccWNfiwerOIB7rDuOlXgFPXw9hVTetom4cz+868JVivCJvIq0ZmuKZXcjAGk3DGEzhnsISBmRmlxmO
+        pDE4zWOHbhyqZg5P6CIov5vAi7d5qKi6a1r8+Fzv7yrYFuWIpTXGKYF5aa+ds/DYTWfQ3i4v9mg92Nnu
+        UlbyVosTm1pm8FN7G8z9NSgfiGG9MYuyPkpL8wweafDhuImDJLGLBduibBSg38ezcT4D3eQ8fhmLos7M
+        48wYj9OjUWhGOJwcFaDuj6D+spoOrJOI8WPYa1mAqlXA4+3TqKGJBRIZ2nSZ0p1sFdKaO94oG6P0dPvm
+        FUPZ+NQohxpTBNVDYZy0pXC4wYCPKjchavwRCDZi1HSR/qI+rKt346YnCVc8BzMnlh52o5xUO8KlMc7n
+        yDSq7OBdHW5UUqG30VnzBhV5640onnvvC6xd+yy2b3kZ5oaP4dH/jKPdemxs8KDaFMWEkIU5IpYe13ZB
+        2m/ipMm+gIihUBomKqZcUKUNS3AsAXpnCBvWl6GsfDM+VVejw2hBXySHO7SzLDS5IepnoPEWTiy9cGTZ
+        BbGif1YMG0OSYvxH5AAdd6344cwl3HRysNGRYKTdei+SxwiXwSgFuEfjBkOLHldSLL0yV2TlM/sGw6ke
+        GWMopV1hmMtoez2cdlRIaafokrctMO1wJHP/uzEs6YaCqS76Wf760v9vpFL9DlZ9xMiTyQglAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
-        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
-        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
-        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
-        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
-        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
-        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
-        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
-        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
-        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
-        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
-        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
-        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
-        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
-        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
-        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
-        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
-        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
-        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
-        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
-        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
-        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
-        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
-        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
-        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
-        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
-        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
+        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZTpl+ER8xcfUKT6SxT3MTNQZFRff043hFpVlOnXOF1Nj
+        smHU+VbipizxlQG+EC5VfAGFVgpoKWihUNpCaWlLaUsF5CVWUCa6s3Mrf4yJZl/yJbf39nfO953vO7f1
+        6Sx27NgxQXk3Fyq1ujU9Pd0jZ6bI5R5BmuIRBMETzzwTHdV2PvZim1QqndF+7P9FRETE9KioqHhrpQuO
+        hjqYXS4YbFbkFxdDqcmDXHkHN2RpOHkuBum3s5BfWIgNYWFz24+/Md4KDw/vr1Ao1CmZGcgr0sLkdKCY
+        4FqzCWqDHipNPtJV2ZDy+dn4OKRlZEAMLZ/t2rVraTvO6yNBIqlKuiVH3NVEqIuKWL0TOosZBcYSdmBA
+        bmEBMnNzkEGSyzdvQJaV6SV40vYM+SyIJCvaoTqPP2NiUiVJNxGfmOjtwMwOjOU2mOzlTDuKrRZoSSaS
+        J8llUGQrvQRtzFb8DY1Ohz37969uh3s1fo+M3CBVKHBBELzaWhwVMJhM0FJ/ndHILIHGoINGr0dWTg7u
+        3L2LludtePikBU1Pn+BBYyOyVCrs2bdvaztkx2CLE2+kSnHpymXk5eXBwooNlEbLinV6HXQGA3T8rCsR
+        CUu4ZfeQqkiHeOZqchISKO15IR5RCQmPwsLCfNthO8ZFiaQ84fp15N+7B3NJCUo5QBM7MBHURFCz2Qyz
+        pQxGdlYkziVPjcwcFVIzFLgmTUHCjesQkgTPawlOxsRIrvBLBZSgTKuFjjJosrNRQF9ouUU6MbWFMLCb
+        Ikql4Xdy8/OQlZtLohzvGgtpqa8n2BsRsVJy6xbyWJGJB4qVShRT10KNBsWUyUbZzBymxVQKq9WKMpsN
+        JWXm9uFrkcNNk9GYnRJUz5kr3zZ5ilqSrWzWs2qjTIYiZg6ra05OQcF3q3D9bAyc1dUo5RKYOHizxYJS
+        SmagV3QkLSKZ6P5XCEoWLLzl+nYNLowZ92LzZ7NfmFmxTSZHLrfKcvw4ni1bAVfYdkRNmgxp3CXYubpG
+        dmTmLMpoRhPX2VxRAau7Eunqex0JlDODdlkWBqN643Z4toTj2KAh2BI0C3o6tYzgVbNmo3zrL6i7lIia
+        dT8had5C6q+Dm95wEdRddR9V9XVw1FTD3dgAdWFhR4LY3gHbyr9cBkfwcrhWb4Rn03as9w/Aykkfo2LR
+        YljWboL9wFG4t4XjEYs4NXchrl2WwCFuVKnRu842mvJ+XR0e/tWKQhLMnz+/o0RH/Ptvss7/AtZFIbAv
+        WwXriu9xYuQYGEKWw7p5O+yrfkRVSCiOzQjC0aMRsHIGztJSOCiPiy9GN6uvftiIFrq6UwIxdnfzXVc2
+        NQjG2QtgpGQuAuqWfI3ixSFwkzhy2gwc/HU3ymlCF9eznD5wcosqqbu7psZL0CoSWCydE4ixY+SoOOWk
+        KdB88inUU2cifxpnMS0IP4+dgEN796KC21WedRtm+sNGH1Rwi5xOJ1ycw4OmJjx7E4Fj8+ZFOyd+gGuD
+        huPOiEAoRo5FJjObub53H0SEhqKRBquhD9zMGm5OLYEbGurx8LEHDc3NeC4SWK2vEphCQ5fqP1+C9OGj
+        kTpwOJIHDoOiZwCS+w1GMglVQ0bhWO++OLV6NSpYuYPvJztfIU6SVFa+lKi++THhSWD7D0FmcPCHqjnz
+        IBsyAjcJmEZweQ9/RI4eh6u9AiDzHwTp4OHI4v2DPl1wbudO1HKolZTnPuWpEvVnFw0t4ohFAltHAv20
+        6b/lElzadyBUBCojybGJHyHyzGlcW/MD5D4+UPUdgIzB7+JuFz/EBo6DngZ7VF+P+tpaND5q4iv7CRpb
+        n3ZOENzNd20NpXlAgHpWe2BUYE4a7Y76Bjxj27pDR+AeMBQu/4Go6dkPqSHfoLql2QvWWXDonsDAwI4z
+        mNOj1xq8Nx77uvtd8PHzGxZ9+nSlJDq6UoiJth8XBPuBmXOdTV3fwR8TJjzYcPiw7WJsbIUQH2+PE+Lt
+        /JfhTSFRsN9UKGpPnDplIuSQl8j8sWd2Ey/e9/P7ys/HZygvezD7iPcYXZnidcD47t1DfH19A3ndk9md
+        KYZ4/t8phniGGD5v/wO1gg7m0n5njAAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
