--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ProjectProfileForm/FrmTheDonorsAndProjectManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ProjectProfileForm/FrmTheDonorsAndProjectManage.resx
@@ -136,65 +136,92 @@
         Ya2Vv9P+BaZuyyTiI0unnEbjNy0iDCfMyGpsAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="AddDonorsBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUISURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
-        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyyjIRoAAg23svdsoEqgtg9FtXdd269u6zbVdX27v7dq99d7e9vTv
-        c+86KhZNNNF/8su9ac/5P+d5nnvO0fyvyufzexljPQX0/wAD0QWgsmBVKjKvyOVYlAb9a9F8Pz2eKlgW
-        lcvn92VzbDKXXxrI8nnQbwRNYgr0/nfQWGWqMp4yOV6wLUpirHbZvGMsgcp2D97r8qGq04ftbV5sbXFj
-        S7Mbr111lfBqkwtllxxo8QrqfJGxpoJtUVKW6dKyshbAmxDRRkH0/hl0Eu2+BFqJZk8CVz1CCU3E5VEe
-        HkEEJQJRZpcLtkWlKcCClGNZKoeLT5OZgLaCsWriFtDo4nH5IdQT551xdZ5ShUWZ1Rdsi5rNMN0cBVBS
-        bKfVK+X52DCOD66NY0/XGKr0Y9jR4cM2KtefebvVi41UplbfUokWxIcFkJgusZhlKYkhns5hIpXBJKE8
-        x5OSil9hppQx5ZnMYEbMg6e55HG2YFtUIs10PAUgf0o7jreoqTs6vKikFSrvm6mZG5tGUX6llPX1I6ho
-        9KAnLMGRAvRTzHgYWFGwXlKcAkTmZRZbZLRqGdZoWmWIGIwuYoDoV4g8iIVwJrI4edOOg7VNcItASwg4
-        N8FqC9ZLCi9kddNzMhMoTcNECod7gzh6N4QjhLY3hEPmIA6YAvjCOPUA390Oom6YQ5U5BM1uLfZXn0GE
-        +mBMAqfsc5eO9/FV9wMEZ2XGLebRMzGLb8n0aF9YDfANvX9NRgdNQXxFQRQOmAPQEjupfE/Wu7HqlyRW
-        6AVo3j8G7clzoCTQGcjmLrrS19UAgdmsbjyVYROzWTh5CabgAkyheZhDC/g1MK9iJG5NzeEm0Uf/WcPz
-        +LSfxyp9BI92TOMZYworDTPQ7NLiUE0dLEJea07k16kBJpNZnT+RYeF5hjN2anKrG9upye9Qk9+gHbyJ
-        PsOKxlG8csWJ9Vc8eOG8B2ta/FjZGcZj3VG8ZBTw9LUIVnRTFnUjeH7n/i9V42WNJzM6Ny8ytyDDGc/A
-        Ek7jnsoi+hSmlxiMZdA/xWO7YQSaZg5PGGIov5vEi7d4aKi7q1oC+MwU6CrYFuVJZHSjvMTGUwxnHTx2
-        0Rm0p2scu/V+7Gj3qZm82eLFhpYgfmxvg/1ODcr7ElhryaKsl8rSHMQjDRM4ZuUgSexCwbYoFwWwcyIb
-        4WUYJufw83AcdXYep4d5nLLFoRvicMImQHsnhvpLWjqwTiDBD2OPYx6aVgGPt0+hhhYWSsq06eTSnewU
-        MjpbLM2GqTzdE3OqoWJ80sahxhpD9UAUJ1xpHGow48PKDYhbfgDCjbBZL9BX1Is19WO44U/BN5MDLbT0
-        sLNxUu0Ql8EInyPTuLqDd3aMoZIavZXOmtepyVuux/Hcu59j9epnsW3zy7A3fAS/6Scc6TZhfYMf1dY4
-        RoUs7DGx9Lh2C9I+KydN9oZEDEQysFIzlYaqz6gEzyJg8kawbm0Zyso34RNtNTosDvTGcrhNO8tBixug
-        cWaa7+DE0gtHkVsQK/qmxaglIqnGf0QJ0HHXie9PX8QNLwcXHQkW2q33YnkMcTJsFOAezaPjw+9LiaVX
-        5rKcvLy3P5ruUbBE0vplBjlZb/RzepuQ1v9Gl7xrnukHY/L9/y1RyTAQTnfRx/LXl/5/I43md4jQxuxv
-        d2EZAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAGXSURBVFhHxddNKwVRHMfx2VAe8rhhZUFJlHdjId6JsrCykSwkIbwMSnYiWVpggRUpC+S5+P6n
+        O5p77u/OzJkZ9/7qU7dz/+fcqTn3PAQe6cEsdnCCOzxW2OdjbGMG3Sgt49jFG34yslp70DHkTidW8A31
+        I1l8YRlt8MoozqEGzcNe2SAyZRL3UAMVcYsJJGYENqHUAGWwhxiATBcuoDqW6QwdqMkSVIf/sICq2KSz
+        GauK63Gjaup5QdWk3IQqTOJG1SRZRRhb4XwWmYgbVZPkFeGKOV1p8OVG1aSZQrARa/DhRtWkWUNwGmvw
+        4UbVpLENLHiINShFo8aM2IobfMQalKJRY0beEXzGGpSiUWNGwgdo+iuwrVJ9mcaNqklzhOb/DZu+ENnW
+        +Fxp8OFG1SR5QjvCNGMzWsdfGr0d29ozjKo08kCyiJq04hCqQ5kO0AKZflxBdSzDJew3EmNH5xuoAYq4
+        ht2yMqUP+1AD5bGHXnjF5sQc8qwRETvqzaPuO88SO73acu17Od3CEEqLup7bxdXkvJ4HwS83SK/jGSWj
+        JgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="RefreshBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB0AAAAgCAYAAADud3N8AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8
+        AAAB30lEQVRIS7WW0bGCQAxF/Xgz/r4SLIESLMESLMESLMESLMESXgmWYAl2wLuH2TjLcmFB8eM4kr1J
+        lpANbNq2XY2f7fbm7CXW+C5K2oqDW8uxRoeCNeIkruIvg2vsrJP0KX5djMAaA5zFWTwEAecyWWZrBDke
+        BLt2QecwWuaBQWLujpK5QEsYLXPvApG4J6c1sGXuXUhEY5SO7Jg7P4pdpmWDPIJaVfZ5Dnj90SINk4tp
+        HhJNdqLWo2tzYqON8wnHXRKHw6kUOqQrHweVqm60+5EoSkSAVwlrJD82eVniF7uNhJM7zEl+R7dWA2fK
+        Mdrea0MefmigQYd9A/IAfy5O8A2Ui6p2SWc3wKcoF8dwbxe/QbpLGraxgrVRIuYAzfrk2opqyHnp0YoB
+        0s1iKxwjBaDbr269RDpGZD6xunNtxQ4cBCXCudp80vA1EXp4xNpAXCIxZyvf7eRdJr17W71e6gOnQCIe
+        vnO2g0R2XnNOD72N9hxBAp4bA9w5B9w5CQKnCQYzvZcQJIj2dgGWMkgIvYtAQrru08Sj49UaQU7vJu5G
+        nYsZWGMgZ5rDBXbcRPXrHqwxR4FiZgJnj2sGBHRvDec3hTWWpOAkXeW9a40OJeQYnd3aUqxxDCW1n5TL
+        aDf/heccdiUine8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="gridViewCommandColumn3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYoSURBVEhLjVV7TFN3GGUPZfhEnBofm07RbTHuYWaizjgx
-        0aFOHcMtTpbNqXNzytSYbBh1PheJm2OJOjNA54OWIoKChVYKSClooVBuX7S0pbSlUuQlVnBMdGfnMv4Y
-        E82+5Etu7+3vnO873/nuDeovdu7c+Yr6eik0Wm1X3rXCgFKlClxRKgMZ8isB2cX0gCRVGjiZlNh9ITOj
-        Wy6Xz+899v8iPj5+XmJiosRR74W7tRk2rxdGpwPlJhPUujIo1UW4pMjF8dPJIDnKKyuxKTZ2ce/xJ8ZT
-        cXFxI1X5+dorBfkoq9LD6nHDRHC9zQqt0QCNrhx5mmLI+fyUJAW5+fkQQ89nu3fvXtWL8/hITUtryLqq
-        RMrFdGirqli9B4LdhgqLmR0YUVpZgYLSEuSTJO3yJSgKC3oI7nXfRzkLIsmaXqj+47fk5BxZ1mVI0tN7
-        OrCxA0utE1ZXLdMFk8MOPclE8iylAqpidQ9BN7MLf0EnCNh74MC6XrhH46eEhE1ylQpnpNIebe3uOhit
-        Vuipv2CxMM3QGQXoDAYUlpSg6Pp1dD7oxu17nWj/4x5utbWhUKPB3v37t/VC9g22OONSjhznL6ShrKwM
-        dlZspDR6ViwYBAhGIwT+FswioZkuu4EcVR7EMxezs5BKaX+XSnA2NfVObGxscC9s3zgvk9WmZmai/MYN
-        2MxmVHOAVnZgJaiVoDabDTZ7DSzsrEqcS5kWBSUa5OSrQBsj9VImLmRlBh5LcDw5WXaBf6qgBDV6PQTK
-        oCsuRgX3Qk8XCWLqK2FkN1WUSsf/lJaXobC0lEQlPTbOzM15PMG++PjPZFevoowVWXnApFbDRF0rdTqY
-        KJOTstk4TLu1Gg6HAzVOJ8w1tt7h61FCpyny8von8C9arNw+a7ZWVqzuMLBqi0KBKmYJq+vIvoKKT9ci
-        81QyPH4/qmkCKwdvs9tRTcmM3BWBpFUkyyu69iiBecnSq95P1uPMlGkP41aueGhjxU6FEqV0lf3nn3F/
-        9Rp4Y3cgceYsyFPOw0XrWtiRjbOo4TJaaWdbXR0cvnoUaW/0JVC/E7HbvjQK/q93ILA1DkdHj8XWiAUw
-        cFNrCN6wYCFqt32H5vPpaNz4DbLeXUr9Bfi4G16C+hpuoqGlGe5GP3xtrdBWVvYlODc0bHvt+6vhjvoY
-        3nVfI7B5B74KDcNnM99E3bLlsG/YDNfBI/Btj8MdFnFi8VJkpMngFh1Vbemxs5NLebO5Gbf/7EKlQQhE
-        Rkb2lehw6MjNjsiVcCyLhmv1WjjWfI5jE6fAGP0xHFt2wLX2SzREx+Do/AgcORIPB2fgqa6Gm/J4+WL0
-        sXr/7TZ0cqu5lI8SiLFnQPDGmjkRsCxcAgsl8xJQWPEhTMuj4SNxwtz5OPT9HtRyCb20Zy33wEMX1VN3
-        X2NjD0EXCYx2e/8EYuycOClFPXM2dG+9De2cd1A+l7OYG4Fvp76CH/btQx3dVVt4DTbuh5N7UEcXeTwe
-        eDmHW+3tuP8kAveWLct2zXgNGaMnoOjFcKgmTkUBs5j51dBhiI+JQRsXrJF74GM20jlNBG5tbcHtuwG0
-        dnTgAQlMDsejBNaYmFWG91Ygb8Jk5IyagOxR46EaHIbsEWOQTULN2Ek4OnQ4TqxbhzpW7ub7ycVXiIck
-        9fX/SNTScZfwgNn5H4KCqKjXNYvehWLsi7hMwFyCKweFImHyNFwcEgZF6GjIx0xAIe8fCnoap3ftQhOH
-        Wk95blKeBlF/dtHaKY6YHTidfQkMc+f9WEpw+fBR0BCohiRHZ7yBhJO/ImP9F1AGBUEz/Hnkj3kB158O
-        wbnwaTBwwe60tKClqQltd9r5yr6Htq4/+ieIGhC8oZHS3CJAC6s9OCm8JJcferS04j7bFn44DN/z4+AN
-        HYXGwSOQE/0R/J0dPWD9hd/vD4SHh/edwaJBQ9bjpZexf2DImaCQkPFJJ0/WpyUl1UuTk1wJMpnr0MLF
-        nvZnnsMvr06/tSn+sPPsuXN1UonElSKVuCRSqUsiS3VJ02WubJWq6diJE1ZCjv0HmR975gDxYnpIyAch
-        QUHjeDmIOUy8x3iGKV6HvTxwYHRwcHA4rwczBzLFEM//O8UQzxAj6Nm/AZ9QD+oH9nfUAAAAAElFTkSu
-        QmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUNSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
+        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyyjIRoAAg23sres2igRqx8botq7ruvW9nWtLX27v7dq1W3v7cvr3
+        uXcdFYsmmug/+eXc3HvO/znnee45R/G/qlgs7mWM9ZfQ/AO0RC+A2pJVpci8JpvNhqnTv1Y+n3dT81TJ
+        sqxCsbiPPs4UiksdWbEIekcABSZBz38H9ZWGSv1pJcdLtmWJjDUum6tdMdR22/FerxN1PU5s73Jga4cN
+        W9pteO2qtYJX26youjSJDocgj88w1layLUvMM9VccoHmAjhiGXRREI17Dj1EtzOGTqLdHsNVu1BBG3F5
+        moddyIAWgkyOXS7ZlpWmAEJigeUpHVY+TWYCukrGsolNQKuVx+WH0Eyct0TlcVIWFnOsuWRb1nyWqaIU
+        QFpiN81eSs/HWg8+uObBnl4X6jQu7FA7sY3S9Wfe7nRgI6Wp07mUooXMwwKITBWMpVhCZIimC/Amspgh
+        pNYTF2XcEnOVuKQ2nsVcpgiexpLH2ZJtWbE0UwUoAPnTsqN4i4q6Q+1ALc1Qet5MxdzYNo3qK5Wsb55C
+        Tasd/UERkwlAM8t0h4EVJeslRSnADJ9kkUVGs87BGE7LjBNj4UWMEiMSoQcxEJZYHidvmnGwsQ22DNAR
+        AM55WWPJeknBhbzKE00ygZap9SZweNCPo3cCOEIoBwM4NODHAb0PX+hmH+C72340TXCoGwhAsVuJ/fVn
+        EKI66OLAKXPy0vFhvu5+ABeXZNxiEf3eeXxLpkeHg3KAb+j5azI6qPfjKwoicWDAByWxk9L3ZLMNq36J
+        Y4VGgOL9Y1CePAdaBHqcqcJFa/q6HMA3n1dNR+aZdz4PCy9C71+APpDCQGABv/pSMjri1mwSN4lh+mYM
+        pvDpCI9VmhAeVd/DM7oEVmrnoNilxKGGJhiEonIgVlwnB5iJ51VTwXkWTDGcMVORO23YTkV+h4r8Bu3g
+        TfQb1rRO45UrFqy/YscL5+1Y0+HGyp4gHusL4yWdgKevhbCij1bRNIXnd+7/UjZelieeVZkCcWYTcrBE
+        szAE07grs4hhiXtLjEWyGJnlsV07BUU7hye0EVTfiePFWzwUVN1VHT58pvf1lmzLsseyKmMgwTwJhrOT
+        PHbRGbSn14PdGjd2dDvllbzZ4cCGDj9+7O6CeagB1cMxrDXkUTVIaWn345EWL44ZOYgiu1CyLctKAQy+
+        OJvic9DOJPHzRBRNZh6nJ3icMkWhGudwwiRAORRB8yUlHVgnEOMnsGcyBUWngMe7Z9FAEwvEc7TpcpU7
+        2SJkVcOzc2yC0tPnTcqGkvFJE4cGYwT1o2GcsKZxqGUAH9ZuQNTwAxBshcl4gf6iQaxpduGGOwHnXAFm
+        LlN52Jk4sXGcy2KKL5BpVN7BO9Uu1FKht9JZ8zoVecv1KJ5793OsXv0stm1+GeaWj+DW/4QjfXqsb3Gj
+        3hjFtJCHOZKpPK5tgrjPyIkzg4EMRkNZGKmYUkHlNizCvgjoHSGsW1uFqupN+ERZD7VhEoORAm7Tzpqk
+        yY1SvwEaP8llKi8cSTYhUzN0LxM2hETZ+I9IAdR3LPj+9EXccHCw0pFgoN16N1LEOJeDiQLcpXEjoQW3
+        M5GpvDKXZeFze0fC6X4JQyitWWaMy2l0bk5jEtKa3+iSt6aYZiySu//dEBa1o8F0L/0sf33p/zdSKH4H
+        jVrFeOUl9wAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="gridViewCommandColumn4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYYSURBVEhLjVZ7TFN3GGVuyvCJ+IqPqVOmJot7mJmoMyom
+        4mu6Mdyiskynzvliakw2jDrfStyUJU6XATpFeqniCyi0UkBLQQuF0hZKS1tKWyogL7GCMtGdnVv5Y0w0
+        +5Ivub23v3O+73zfua1fd7Fz585Jqtv5UGs07ZmZmV4FM02h8AqyNK8gCF4J8/e42I4EQdIhk8lmdR77
+        fxEdHT0zNjZWYqt2w9nUAIvbDaPdhsLSUqi0BVCobuGaPAO/nY1H5s0cFBYXY2NkZGjn8VfGa1FRUYOU
+        SqUmLTsLBSU6mF1OlBJcZzFDYzRArS1EpjoXMj4/I0lERlYWxNDx2e7du5d14rw8kqTSmpQbCiReToam
+        pITVu6C3WlBkKmMHRuQXFyE7Pw9ZJLl4/RrkOdk+gkcdT1DIgkiyshOq+/gjPj5dmnIdkuRkXwcWdmCq
+        tMPsqGQ6UGqzQkcykTxFIYcyV+Uj6GC2429o9XrsPXBgTSfci/FLTMxGmVKJc4Lg09bqrILRbIaO+utN
+        JmYZtEY9tAYDcvLycOv2bbQ97cD9R21oefwI95qbkaNWY+/+/ds6IbsGW5x8LV2GC5cuoqCgAFZWbKQ0
+        OlasN+ihNxqh52d9mUhYxi27g3RlJsQzl1NTkERp/xQkiE1KehAZGenfCds1zkullUlXr6Lwzh1YyspQ
+        zgGa2YGZoGaCWiwWWKwVMLGzEnEuBRpk56mRnqXEFVkakq5dhZAieF9K8Ft8vPQSv1RECSp0OugpgzY3
+        F0X0hY5bpBdTVwwjuymhVFp+J7+wADn5+STK862xkJH+coJ90dGrpDduoIAVmXmgVKVCKXUt1mpRSpns
+        lM3CYVrN5bDZbKiw21FWYekcvg553DQ5jdktQe28UMX2qdM00lxVq4FVm+RylDDzWF1rahqKvl6Nq2fi
+        4aqtRTmXwMzBW6xWlFMyI72iJ2kJyUT3v0BQtnDRDfdXa3Fu/IRn2+aHPrOwYrtcgXxulfXECTxZvhLu
+        yB2InTIVssQLcHB1TezIwllU0IxmrrOlqgo2TzUyNXe6Eqhmh+y2LgpD7aYd8G6NwvGhw7E1ZA4MdGoF
+        wWvmzEXlth/RcCEZdeu/R8r8RdRfDw+94Saop+Yuahob4Kyrhae5CZri4q4ECf2Ctld+thzOsBVwr9kE
+        7+Yd2BAYhFVTPkTV4iWwrtsMx8Fj8GyPwgMWcSp0Ea5clMIpblS5ybfOdprybkMD7v/VjmISLFiwoKtE
+        RwMHbbYt+BS2xeFwLF8N28pvcHLMeBjDV8C2ZQccq79DTXgEjs8KwbFj0bBxBq7ycjgpj5svRg+rr73f
+        jDa6ulsCMfb09F9fMT0EprkLYaJkbgLql36B0iXh8JA4ZsYsHPppDyppQjfXs5I+cHGLqqm7p67OR9Au
+        Elit3ROIsXPM2ETVlGnQfvQxNNNno3AGZzEjBD+8MwmH9+1DFberMucmLPSHnT6o4ha5XC64OYd7LS14
+        8ioC55Yti3dNfg9Xho7CrdHBUI55B9nMXOaGfv0RHRGBZhqsjj7wMOu4OfUEbmpqxP2HXjS1tuKpSGCz
+        vUhgjohYZvhkKTJHjUP6kFFIHTISyj5BSB04DKkkVA8fi+P9BuDUmjWoYuVOvp8cfIW4SFJd/VyixtaH
+        hCeB/T8E2WFh76vnzYd8+GhcJ2AGwRW9AxEzbgIu9w2CPHAoZMNGIYf3D/n1wNldu1DPoVZTnruUp0bU
+        n100tYkjFgnsXQkMM2b+nE9w2YAhUBOogiTHJ3+AmN9P48rab6Hw84N6wGBkDXsLt3sEICF4Agw02IPG
+        RjTW16P5QQtf2Y/Q3P64e4Kwnv7r6ijNPQI0stqDY4PzMmh3NDbhCdvWHz4Kz+ARcAcOQV2fgUgP/xK1
+        ba0+sO6CQ/cGBwd3ncG83n3X4u2J2N8r4JxfQMDIuNOnq6VxcdVCfJzjhCA4Ds4OdbW8/iZ+nTTp3sYj
+        R+znExKqBInEkShIHPyX4UshWXBcVyrrT546ZSbk8OfI/LFn9hQv3g0I+DzAz28EL3sz+4v3GK8zxeug
+        ib16hfv7+wfzug+zF1MM8fy/UwzxDDH83vgHUQIO/ScvcgYAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
