--- a/UcasProjectManagement/UcasProWindowsForm/Properties/Resources.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Properties/Resources.resx
@@ -121,7 +121,13 @@
   <data name="editColm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\editColm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="addadd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\addadd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="DeletColm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DeletColm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SaveChang" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SaveChang.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
